syntax = "proto3";

package calculator.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/belo4ya/edu-dist-calculate-api/pkg/calculator/v1;v1";

// Internal service for agent communication
service AgentService {
  // Get task for execution (for agents)
  rpc GetTask(google.protobuf.Empty) returns (GetTaskResponse) {
    option (google.api.http) = {get: "/internal/task"};
  }

  // Submit task processing result (from agents)
  rpc SubmitTaskResult(SubmitTaskResultRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/internal/task"
      body: "*"
    };
  }
}

// Operations for calculation
enum Operation {
  OPERATION_UNSPECIFIED = 0;
  OPERATION_ADDITION = 1;
  OPERATION_SUBTRACTION = 2;
  OPERATION_MULTIPLICATION = 3;
  OPERATION_DIVISION = 4;
}

// Task for agent
message Task {
  string id = 1;
  double arg1 = 2;
  double arg2 = 3;
  Operation operation = 4;
  google.protobuf.Duration operation_time = 5;
}

// Response with task for agent
message GetTaskResponse {
  Task task = 1;
}

// Request to submit task result
message SubmitTaskResultRequest {
  string id = 1;
  double result = 2;
}
